Aku tambahin di view Index, coba kalian liat

--- a/NSCMovie/Views/Home/Index.cshtml
+++ b/NSCMovie/Views/Home/Index.cshtml
@@ -2,7 +2,21 @@
     ViewData["Title"] = "Home Page";
 }
 
+<head>
+    <style>
+        body{
+            background-color: lightgray;
+        }        
+    </style>
+</head>
+
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h6>See your movie and buy the ticket in here</h6>
+</div>
+<div class="text-left">
+    <p> </p>
+
+    <h6>NO TIME NO DIE</h6>
+    <img src="https://cdn.cgv.id/uploads/movie/compressed/21012300.jpg" alt="Posters" width="500" height="600">
 </div>
