--- a/NSCMovie/Views/Home/Index.cshtml
+++ b/NSCMovie/Views/Home/Index.cshtml
@@ -2,33 +2,22 @@
     ViewData["Title"] = "Home Page";
 }
 
+
 <head>
-    <style>
+    <style>    
         body{
-            background-color: lightgray;
-        }        
+            background-color: #C0C0C0;                
+        }
+        nav{
+            color: #000000;
+        }
     </style>
 </head>
-
-
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <h6>See your movie and buy the ticket in here</h6>    
-</div>
-<div class="text-left">    
-    <h6> </h6>
-    <h6> </h6>
-</div>
-<div class="text-left">
-    <table class="table">
-        <tr>
-            <td>                
-                <img src="https://cdn.cgv.id/uploads/movie/compressed/21012300.jpg" alt="Posters" width="200" height="300">
-            </td>
-            <td>
-                <h6>NO TIME NO DIE</h6>
-                <p>James Bond is enjoying a tranquil life in Jamaica after leaving active service. However, his peace is short-lived as his old CIA friend, Felix Leiter, shows up and asks for help. The mission to rescue a kidnapped scientist turns out to be far more treacherous than expected, leading Bond on the trail of a mysterious villain who's armed with a dangerous new technology.</p>
-            </td>
-        </tr>
-    </table>
-</div>
+<body>
+    <nav>
+        <div class="text-center">
+            <h1 class="display-4"><b>NSCMovie</b></h1>        
+            <h6>See your movie and buy the ticket in here</h6>    
+        </div>
+    </nav>
+</body>
