--- a/NSCMovie/Views/Home/Index.cshtml
+++ b/NSCMovie/Views/Home/Index.cshtml
@@ -8,16 +8,22 @@
         body{
             background-color: #C0C0C0;                
         }
+        header{
+            font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif ;
+            color: #000000;            
+        }
         nav{
+            background-color: #808080;
+            font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif ;
             color: #000000;
         }
     </style>
 </head>
 <body>
-    <nav>
+    <header>
         <div class="text-center">
             <h1 class="display-4"><b>NSCMovie</b></h1>        
             <h6>See your movie and buy the ticket in here</h6>    
         </div>
-    </nav>
+    </header>
 </body>
