--- a/NSCMovie/Views/Movie/Index.cshtml
+++ b/NSCMovie/Views/Movie/Index.cshtml
@@ -7,15 +7,23 @@
         body{
             background-color: #C0C0C0;
         }
+        header{            
+            color: #000000;            
+        }        
+        nav{
+            background-color: #808080;
+            font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif ;
+            color: #000000;
+        }                
     </style>
 </head>
 <body>
-    <header class="color-#000000">
-        <div>
-            <h3 display="4"><b> Movie </b></h3>
+    <header>
+        <div class="mx-auto" style="font-family:Impact;">
+            <h3><b> MOVIE PAGE </b></h3>
         </div>
         <div class="text-left">
-            <table class="table">
+            <table class="table" >
                 <tr>
                     <td>                
                         <img src="https://cdn.cgv.id/uploads/movie/compressed/21012300.jpg" alt="Posters" width="200" height="300">
