--- a/NSCMovie/Views/Home/Index.cshtml
+++ b/NSCMovie/Views/Home/Index.cshtml
@@ -22,7 +22,7 @@
 <body>
     <header>
         <div class="text-center">
-            <h1 class="display-4"><b>NSCMovie</b></h1>        
+            <h1 class="display-4" style="font-size: 500%;"><b>NSC Movie</b></h1>        
             <h6>See your movie and buy the ticket in here</h6>    
         </div>
     </header>
