--- a/NSCMovie/Views/Movie/MovieOne.cshtml
+++ b/NSCMovie/Views/Movie/MovieOne.cshtml
@@ -1,5 +1,26 @@
+@model Movie
 @{
-    ViewData["Title"] = "No Time To Die";
+    ViewData["Title"] = "Movie";
 }
 
-<h1>Hiii</h1>
+<head>
+    <style>
+        body{
+            background-color: #C0C0C0;
+        }
+        header{            
+            color: #000000;            
+        }        
+        nav{
+            background-color: #808080;
+            font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif ;
+            color: #000000;
+        }                
+    </style>
+</head>
+<body>
+    <div class="text-center">
+        <img src="https://cdn.cgv.id/uploads/movie/compressed/21012300.jpg" alt="Posters" width="130" height="200">
+    </div>
+
+</body>
