--- a/NSCMovie/Views/Movie/Index.cshtml
+++ b/NSCMovie/Views/Movie/Index.cshtml
@@ -30,7 +30,7 @@
                         <img src="https://cdn.cgv.id/uploads/movie/compressed/21012300.jpg" alt="Posters" width="130" height="200">
                     </td>
                     <td>
-                        <a style="Arial" asp-controller="Movie" asp-action="MovieOne">No Time To Die</a>
+                        <a style="Arial" asp-controller="Movie" asp-action="Movie">No Time To Die</a>
                         <p class="mt-4">
                             James Bond is enjoying a tranquil life in Jamaica after leaving active service. However, his peace 
                         is short-lived as his old CIA friend, Felix Leiter, shows up and asks for help. The mission to rescue 
@@ -44,7 +44,7 @@
                         <img src="https://upload.wikimedia.org/wikipedia/id/thumb/1/1f/Poster_film_Nussa.jpeg/220px-Poster_film_Nussa.jpeg" alt="Posters" width="130" height="200">
                     </td>
                     <td>
-                        <a style="Arial" asp-controller="Movie" asp-action="MovieOne">Nussa</a>
+                        <a style="Arial" asp-controller="Movie" asp-action="Movie">Nussa</a>
                         <p class="mt-4">
                             Nussa, the defending champion of the science fair, wants to win back the race with her designed 
                         rocket accompanied by Abba. However, his rocket experiment has failed, and his friends turn to 
