Add something in html

--- a/NSCMovie/Views/Movie/Index.cshtml
+++ b/NSCMovie/Views/Movie/Index.cshtml
@@ -30,7 +30,7 @@
                         <img src="https://cdn.cgv.id/uploads/movie/compressed/21012300.jpg" alt="Posters" width="130" height="200">
                     </td>
                     <td>
-                        <a style="Arial" asp-controller="Movie" asp-action="Movie">No Time To Die</a>
+                        <a style="Arial" asp-controller="Movie" asp-action="Movie" asp-route-id="1">No Time To Die</a>
                         <p class="mt-4">
                             James Bond is enjoying a tranquil life in Jamaica after leaving active service. However, his peace 
                         is short-lived as his old CIA friend, Felix Leiter, shows up and asks for help. The mission to rescue 
