--- a/NSCMovie/Views/Movie/Movie.cshtml
+++ b/NSCMovie/Views/Movie/Movie.cshtml
@@ -36,7 +36,7 @@
             </tr>  
             <tr>
                 <td>@Html.DisplayNameFor(model => Model.Rating)</td>
-                <td>@Html.DisplayFor(model => Model.Rating)</td>                                            
+                <td>@Html.DisplayFor(model => Model.Rating.Rating)</td>                                            
             </tr> 
             <tr>
                 <td>@Html.DisplayNameFor(model => Model.Room)</td>
@@ -44,4 +44,8 @@
             </tr>
         </tbody>
     </table>
+    <div class="text-right">
+        <h6>@Html.DisplayFor(model => Model.Price)</h6>
+        <button></button>
+    </div>
 </body>
