--- a/NSCMovie/Views/Movie/Movie.cshtml
+++ b/NSCMovie/Views/Movie/Movie.cshtml
@@ -46,6 +46,11 @@
     </table>
     <div class="text-right">
         <h6>@Html.DisplayFor(model => Model.Price)</h6>
-        <button></button>
+        <form asp-controller="Movie" asp-action="Transaction" asp-route-id="@Model.Id">
+            <div class="form-group">
+                    <button type="submit" class="btn-primary"> Yes </button>
+                    <a asp-controller="Movie" asp-action="index"> Back </a>
+            </div>
+        </form>
     </div>
 </body>
