--- a/NSCMovie/Views/Movie/Movie.cshtml
+++ b/NSCMovie/Views/Movie/Movie.cshtml
@@ -46,7 +46,7 @@
     </table>
     <div class="text-right">
         <h6>@Html.DisplayFor(model => Model.Price)</h6>
-        <form asp-controller="Transaction" asp-action="Create">
+        <form asp-controller="Transaction" asp-action="Create" method="get">
             <div class="form-group">
                     <button type="submit" class="btn-primary"> Yes </button>
                     <a asp-controller="Movie" asp-action="index"> Back </a>
