--- a/NSCMovie/Views/Transaction/Create.cshtml
+++ b/NSCMovie/Views/Transaction/Create.cshtml
@@ -1,4 +1,4 @@
-@model NSCMovie.Models.TranksaksiMovie
+@model NSCMovie.Models.MovieTransactionViewModel
 @{
     ViewData["Title"] = "Create";
 }
@@ -21,12 +21,12 @@
 <body>
     <div>
         <h2 class="display-4">Transaction</h2>
-        <form asp-action="Create" asp-route-id="@Model.Id">
+        <form asp-action="Create" asp-route-id="@Model.Movie.Id">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>            
             <div class="form-group">
-                <label asp-for="TicketAmount" class="control-label"></label>
-                <input asp-for="TicketAmount" class="form-control" />
-                <span asp-validation-for="TicketAmount" class="text-danger"></span>
+                <label asp-for="TranksaksiMovie.TicketAmount" class="control-label"></label>
+                <input asp-for="TranksaksiMovie.TicketAmount" class="form-control" />
+                <span asp-validation-for="TranksaksiMovie.TicketAmount" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn" />
