AddMigrations and Make Transaction Completely

--- a/NSCMovie/Views/Transaction/Create.cshtml
+++ b/NSCMovie/Views/Transaction/Create.cshtml
@@ -29,9 +29,14 @@
                 <span asp-validation-for="TranksaksiMovie.TicketAmount" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Transaction.Payment" class="control-label"></label>
-                <input asp-for="Transaction.Payment" class="form-control" />
-                <span asp-validation-for="Transaction.Payment" class="text-danger"></span>
+                <label asp-for="TranksaksiMovie.Payment" class="control-label"></label>
+                <input asp-for="TranksaksiMovie.Payment" class="form-control" />
+                <span asp-validation-for="TranksaksiMovie.Payment" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="TranksaksiMovie.Time" class="control-label"></label>
+                <input asp-for="TranksaksiMovie.Time" class="form-control" />
+                <span asp-validation-for="TranksaksiMovie.Time" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Buy" class="btn" />
