--- a/NSCMovie/Views/Admin/Index.cshtml
+++ b/NSCMovie/Views/Admin/Index.cshtml
@@ -28,7 +28,7 @@
         </div>
         <div class="text-left mt-5">
             <table class="table" >
-                @foreach (var item in Model.Movies)
+                @foreach (var item in Model.MovieLists)
                 {
                     <tr>
                         <td>                
