--- a/NSCMovie/Views/Shared/_Layout.cshtml
+++ b/NSCMovie/Views/Shared/_Layout.cshtml
@@ -22,6 +22,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Movie" asp-action="Index">Movie Page</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Transaction" asp-action="History">History</a>
+                        </li>
                     </ul>
                 </div>
             </div>
