--- a/NSCMovie/Views/Admin/Delete.cshtml
+++ b/NSCMovie/Views/Admin/Delete.cshtml
@@ -35,8 +35,8 @@
                     <td>@Html.DisplayFor(x => x.Price)</td>
                 </tr>
                 <tr>
-                    <td>@Html.DisplayNameFor(x => x.Schedule)</td>
-                    <td>@Html.DisplayFor(x => x.Schedule)</td>                    
+                    <td>@Html.DisplayNameFor(x => x.TimeScheduleId)</td>
+                    <td>@Html.DisplayFor(x => x.TimeScheduleId)</td>                    
                 </tr>                                    
                 <tr>
                     <td>@Html.DisplayNameFor(x => x.Days)</td>
