--- a/NSCMovie/Views/Admin/Edit.cshtml
+++ b/NSCMovie/Views/Admin/Edit.cshtml
@@ -40,9 +40,9 @@
                 <span asp-validation-for="RatingId" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Schedule" class="control-label"></label>
-                <input asp-for="Schedule" class="form-control" />
-                <span asp-validation-for="Schedule" class="text-danger"></span>
+                <label asp-for="TimeScheduleId" class="control-label"></label>
+                <input asp-for="TimeScheduleId" class="form-control" />
+                <span asp-validation-for="TimeScheduleId" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Days" class="control-label"></label>
