--- a/NSCMovie/Views/Movie/Movie.cshtml
+++ b/NSCMovie/Views/Movie/Movie.cshtml
@@ -31,8 +31,8 @@
         </thead>        
         <tbody>
             <tr>
-                <td>@Html.DisplayNameFor(model => Model.Schedule)</td>
-                <td>@Html.DisplayFor(model => Model.Schedule)</td>                                   
+                <td>@Html.DisplayNameFor(model => Model.TimeSchedule)</td>
+                <td>@Html.DisplayFor(model => Model.TimeSchedule.Time)</td>                                   
             </tr>  
             <tr>
                 <td>@Html.DisplayNameFor(model => Model.Rating)</td>
