--- a/NSCMovie/Views/Admin/Index.cshtml
+++ b/NSCMovie/Views/Admin/Index.cshtml
@@ -1,4 +1,4 @@
-@model Schedule
+@model NSCMovie.Models.Schedule
 @{
     ViewData["Title"] = "Movie Page";
 }
@@ -28,14 +28,14 @@
         </div>
         <div class="text-left mt-5">
             <table class="table" >
-                @foreach (var item in Model.MovieLists)
+                @foreach (var item in Model.Movies)
                 {
                     <tr>
                         <td>                
                             <img src="@item.Image" alt="Posters" width="130" height="200">
                         </td>
                         <td>
-                            <a style="Arial" asp-controller="Movie" asp-action="Movie" asp-route-id="1">@item.Title</a>
+                            <a style="Arial" asp-controller="Movie" asp-action="Movie" asp-route-id="@item.Id">@item.Title</a>
                             <p class="mt-4">@item.Definition</p>
                         </td>
                         <td>
