--- a/NSCMovie/Views/Admin/Delete.cshtml
+++ b/NSCMovie/Views/Admin/Delete.cshtml
@@ -54,7 +54,7 @@
 
     <div>
         <p>Do you want to delete this Movie</p>
-        <form asp-controller="Movie" asp-action="DeleteConfirmed" asp-route-id="@Model.Id">
+        <form asp-controller="Admin" asp-action="DeleteConfirmed" asp-route-id="@Model.Id">
             <div class="form-group">
                     <button type="submit" class="btn-primary"> Yes </button>
                     <a asp-controller="Movie" asp-action="index"> Back </a>
